--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,7 @@
 auxiliary.org-netbeans-modules-css-prep.less_2e_configured=true
+auxiliary.org-netbeans-modules-css-prep.sass_2e_configured=true
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=true
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 platform.active=Ruby
 rails.port=3000
 source.encoding=UTF-8
